# euler

./: Euler.hs  Main.hs  PrimeGen.hs  Util.hs  euler.cabal
