Name:                   euler
Version:                0.1
License:                MIT
License-file:           LICENSE
Author:                 Chris Pettitt
Maintainer:             cpettitt@gmail.com
Copyright:              Copyright (c) 2011 Chris Pettitt
Category:               Algorithms
Synopsis:               Haskell solutions for Project Euler (http://projecteuler.net)
Description:            Haskell solutions for Project Euler (http://projecteuler.net)

Build-Type:             Simple
Cabal-Version:          >= 1.4

Executable euler
    Main-Is:            Main.hs
    Build-Depends:      base >= 3, base < 5
    Ghc-Options:        -Wall -rtsopts -O2
